<resources>
    <string name="app_name">FaceDetectDemo</string>

    <string name="debug_tip">Functional development</string>
    <string name="reopen">Please Reopen Apps</string>
    <string name="rect">Rect : </string>
    <string name="blur">Blur : </string>
    <string name="light">Light : </string>
    <string name="score">Score : </string>

    <string name="sure">Sure</string>
    <string name="no">No</string>
    <string name="finish">Finish ?</string>
    <string name="no_face">No Face</string>
    <string name="load_camera">Loading Camera</string>
    <string name="load">Loading</string>
    <string name="load_done">Loading Done</string>
    <string name="check">Check</string>
    <string name="press_exit">Press Again Exit App</string>
    <string name="init_fail">Init Fail</string>
    <string name="init_close">Can not Open Register</string>

    <string name="authorization">Authorization</string>
    <string name="authorization_not">Not Need Authorization</string>
    <string name="authorization_fail">Authorization Fail</string>
    <string name="authorization_success">Authorization Success</string>
    <string name="authorization_had">Had Authorization</string>

    <string name="bmpregist">Register With Pic</string>
    <string name="choose">Choose Pic</string>
    <string name="start">Start Parse</string>
    <string name="register">Register</string>
    <string name="registered">Registered</string>
    <string name="unregistered">UnRegistered</string>
    <string name="register_success">Register Success</string>
    <string name="register_fail">Register Fail</string>
    <string name="name_empty">Name is Empty</string>

    <string name="yuvregist">Regist With Yuv</string>
    <string name="reopen_activity">Please Reopen Activity</string>
    <string name="not_center">Face Not Center</string>
    <string name="rise">Rise</string>
    <string name="down">Down</string>
    <string name="keep_left">Keep Left</string>
    <string name="keep_right">Keep Right</string>
    <string name="enter_register">Enter Register Message</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>

    <string name="detect">Detect</string>
    <string name="slot_card">Slot Card</string>
    <string name="reset">Reset</string>
    <string name="random_register">Random Register</string>
    <string name="match_success">Match Success</string>
    <string name="match_fail">Match Fail</string>
    <string name="parse_begin">Parse Begin</string>
    <string name="parse_success">Parse Success</string>
    <string name="parse_fail">Parse Fail</string>

    <string name="list">Register List</string>
    <string name="delete">Delete</string>
    <string name="deleting">Delete Now</string>
    <string name="delete_all">Delete All</string>
    <string name="selectall">Select All</string>
    <string name="selectpage">Select Now</string>
    <string name="select">Select : </string>
    <string name="selectmore">Select More</string>
    <string name="update_success">Update Success</string>
    <string name="update_fail">Update Fail</string>
    <string name="delete_fail">Delete Fail</string>

    <string name="bulkregist">Bulk registration</string>
    <string name="file_path">File Path</string>
    <string name="file_size">File Size</string>
    <string name="dir_empty">Dir Empty</string>
    <string name="register_all">Register All</string>

    <string name="mul_live">Mul Liveness</string>
    <string name="mul_assist">Mul Assist</string>
    <string name="mul_frame">Mul Frame</string>
    <string name="mul_threshold">Mul Threshold</string>
    <string name="config">Config</string>
    <string name="set">Set</string>
    <string name="set_success">Set Success</string>
    <string name="set_fail">Set Fail</string>
    <string name="auto">Auto</string>
    <string name="preview_size">Camera Preview Size</string>
    <string name="tracker_mode">Tracker Mode</string>
    <string name="register_db">Register DB</string>
    <string name="detect_db">Detect DB</string>
    <string name="db_default">Default DB</string>
    <string name="db_ex">Expand DB</string>
    <string name="detect_mode">Detect Mode</string>
    <string name="live_mode">Live Mode</string>
    <string name="live_mode_normal">Normal Mode</string>
    <string name="live_mode_auto">Auto Mode</string>
    <string name="recognition_mode_track1">Tracker One</string>
    <string name="recognition_mode_track2">Tracker Two</string>
    <string name="recognition_mode_detect">Only Detect</string>
    <string name="recognition_mode_recognition">Only Recognition</string>
    <string name="enhance">Enhance</string>
    <string name="cov">Cover</string>
    <string name="debug">Debug</string>
    <string name="info">Face Info</string>
    <string name="use_new">Use New Live Version</string>
    <string name="use_fix">Use Mix Live Version</string>
    <string name="use_AWRGB">Use AW RGB Live Version</string>
    <string name="savecov">Save Cover</string>
    <string name="savefake">Save Fake</string>
    <string name="savelive">Save Live</string>
    <string name="savetan">Save Tan</string>
    <string name="saveerror">Save Error</string>
    <string name="saveblur">Save Blur</string>
    <string name="savenoface">Save NoFace</string>
    <string name="savess">Save Similarity Small</string>
    <string name="savet">Save Tracker Face</string>
    <string name="lr">Face Rect Left x Right</string>
    <string name="tb">Face Rect Top x Bottom</string>
    <string name="camera_id">Camera ID</string>
    <string name="camera_degree">Camera Degree</string>
    <string name="preview_degree">Preview Degree</string>
    <string name="tracker_count">Tracker Count</string>
    <string name="tracker_w">Tracker Scale Width</string>
    <string name="tracker_h">Tracker Scale Height</string>
    <string name="detect_face_rect">Tracker Face Rect</string>
    <string name="detect_rate">Detect Rate</string>
    <string name="tracker_size">Tracker Size</string>
    <string name="feature_size">Extract Size</string>
    <string name="detect_size">Detect Size</string>
    <string name="value_face_minima">Register face minima</string>
    <string name="value_unlock">Recognition Value</string>
    <string name="value_liveness">Liveness Value</string>
    <string name="value_liveness1">Liveness Value 1</string>
    <string name="value_liveness2">Liveness Value 2</string>
    <string name="value_liveness3">Liveness Value 3</string>
    <string name="value_liveness4">Liveness Value 4</string>
    <string name="value_fake_count">Fake Count</string>
    <string name="value_live_count">Live Count</string>
    <string name="value_detect_light_max">Max Light(SDK Detect)</string>
    <string name="value_detect_light_min">Min Light(SDK Detect)</string>
    <string name="value_detect_blur">Blur (SDK Detect)</string>
    <string name="value_detect_blur_new">BlurNew (SDK Detect)</string>
    <string name="value_detect_num">Max Face Num (SDK Detect)</string>
    <string name="value_register_light_max">Max Light(SDK Register)</string>
    <string name="value_register_light_min">Min Light(SDK Register)</string>
    <string name="value_register_blur">Blur (SDK Register)</string>
    <string name="switch_liveness">Detect with Liveness</string>
    <string name="switch_recognition">Detect with Recognition</string>

    <string name="infrared_mode">Infrared Mode</string>
    <string name="infrared_value">Infrared Recognition Value</string>
    <string name="iou_value">IOU</string>
    <string name="saveinfrared">Save Infrared</string>
    <string name="saveinfraredlive">Save Infrared Live J</string>
    <string name="saveinfraredfake">Save Infrared Fake J</string>
    <string name="infrared_switch">Detect with Infrared</string>

    <string name="switch_double_camera">Double Camera and Detect with Infrared</string>
    <string name="camera_id_infrared">Infrared Camera ID</string>
    <string name="camera_degree_infrared">Infrared Camera Degree</string>
    <string name="preview_degree_infrared">Infrared Preview Degree</string>
    <string name="pl">Screen Portrait Camera Preview Landscape</string>
    <string name="uvc_open_camera">UVC Mode Open Camera</string>
    <string name="ready_to_register">Please Ready To Register %dS</string>
    <string name="start_register">Start Register</string>
    <string name="face_overlay">Face Overlay</string>

    <string name="value_liveness_infrared">Liveness Infrared Value</string>
    <string name="value_liveness_infrared1">Liveness Infrared Value 1</string>
    <string name="value_liveness_infrared2">Liveness Infrared Value 2</string>
    <string name="value_liveness_infrared3">Liveness Infrared Value 3</string>
    <string name="value_liveness_infrared4">Liveness Infrared Value 4</string>
    <string name="remove_unnormal_face">Remove Unnormal Face</string>
    <string name="retina_fd">Retina FD</string>
    <string name="register_similarity_filter">Similarity Filter(SDK Register)</string>
    <string name="recognize">Recognize</string>
</resources>
