<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_pop"
    android:paddingLeft="@dimen/dp_50"
    android:paddingRight="@dimen/dp_50"
    android:paddingTop="@dimen/dp_20"
    android:paddingBottom="@dimen/dp_20">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="200dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_register"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <ImageView
                android:scaleType="fitXY"
                android:id="@+id/iv_register_pop"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_marginTop="@dimen/dp_15" />

            <EditText
                android:visibility="gone"
                android:id="@+id/et_register_id"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:hint="id"
                android:textColor="@color/white"
                android:textColorHint="@color/baseColor"
                android:textSize="22sp" />
            <EditText
                android:id="@+id/et_register_name"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:hint="@string/name"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="22sp"/>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15">

                <Button
                    android:id="@+id/btn_register_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/btn_register_sure"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/done" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>